# ChangeLog for dev-tcltk/tclx
# Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-tcltk/tclx/ChangeLog,v 1.43 2012/04/30 15:00:58 jer Exp $

  30 Apr 2012; Jeroen Roovers <jer@gentoo.org> files/tclx-8.4-ldflags.patch:
  Improve LDFLAGS patch.

  18 Mar 2012; Pacho Ramos <pacho@gentoo.org> metadata.xml:
  Drop maintainer due retirement, bug 118003.

*tclx-8.4-r2 (02 Apr 2010)

  02 Apr 2010; Justin Lecher <jlec@gentoo.org> +tclx-8.4-r2.ebuild,
  +files/tclx-8.4-ldflags.patch:
  Imported from prefix overlay, ldflags respectation patch

  05 Aug 2009; Federico Ferri <mescalinum@gentoo.org> tclx-8.4-r1.ebuild:
  disable tests wrt bug 279283

  02 Jun 2007; Raúl Porcel <armin76@gentoo.org> tclx-8.4-r1.ebuild:
  Stabilizing latest as actual stable doesn't work with stable gcc

  01 Jun 2007; Raúl Porcel <armin76@gentoo.org> tclx-8.4-r1.ebuild:
  Add ~alpha wrt #176268

  01 Jun 2007; Peter Weller <welp@gentoo.org> tclx-8.4-r1.ebuild:
  Stable on amd64 wrt bug 176268

  31 Dec 2006; Matti Bickel <mabi@gentoo.org> tclx-8.4-r1.ebuild:
  ppc stable (bug #148854)

  22 Dec 2006; Ferris McCormick <fmccor@gentoo.org> tclx-8.4-r1.ebuild:
  Stable on sparc.  Builds fine, runs all tests, no open bugs.

  15 Dec 2006; Matti Bickel <mabi@gentoo.org> ChangeLog:
  Readding ~ppc for bug #148854

  03 Dec 2006; Christian Faulhammer <opfer@gentoo.org> tclx-8.4-r1.ebuild:
  stable x86, bug #148854

  01 Dec 2006; Ferris McCormick <fmccor@gentoo.org> tclx-8.4-r1.ebuild:
  Re-adding ~sparc keyword:  Builds fine and runs all its tests with or w/o
  USE=threads.  (Both with USE=tk)

*tclx-8.4-r1 (30 Nov 2006)

30 Nov 2006; Markus Ullmann <jokey@gentoo.org> -files/tclx-8.3-argv.patch,
  -files/tclx-8.3-makecfg.patch, +files/tclx-8.4-relid.patch,
  +files/tclx-8.4-varinit.patch, -tclx-8.3-r1.ebuild, -tclx-8.4.ebuild,
  +tclx-8.4-r1.ebuild:
  Cleaning up and using improved ebuild from bug #95845 thanks to Sebastien
  Fabbro
