@@ -1,10 +1,10 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <!DOCTYPE pkgmetadata SYSTEM "http://www.gentoo.org/dtd/metadata.dtd">
 <pkgmetadata>
-<herd>tcltk</herd>
-<maintainer>
-  <email>tcltk@gentoo.org</email>
-  <description>TCL / TK herd</description>
-</maintainer>
-<longdescription>Extended TCL</longdescription>
+	<herd>tcltk</herd>
+	<maintainer>
+		<email>tcltk@gentoo.org</email>
+		<description>TCL / TK herd</description>
+	</maintainer>
+	<longdescription>Extended TCL</longdescription>
 </pkgmetadata>
